force-app/main/default/objects/Notification_Process__c/Notification_Process__c.object-meta.xml
<CustomObject>
    <label>Notification Process</label>
    <nameField>
        <displayFormat>NP-{000000}</displayFormat>
        <label>Notification Process Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Processes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>