force-app/main/default/objects/Notification_Process__c/fields/Change_date__c.field-meta.xml
<CustomField>
    <fullName>Change_date__c</fullName>
    <label>Change Date</label>
    <type>Date</type>
</CustomField>