force-app/main/default/objects/Notification_Process__c/fields/Deadline_For_Response__c.field-meta.xml
<CustomField>
    <fullName>Deadline_For_Response__c</fullName>
    <label>Deadline For Response</label>
    <type>Date</type>
</CustomField>