force-app/main/default/objects/Notification_Process__c/fields/New_Notification_Process__c.field-meta.xml
<CustomField>
    <fullName>New_Notification_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Notification Process</label>
    <referenceTo>Notification_Process__c</referenceTo>
    <relationshipLabel>Notification Processes Rejected</relationshipLabel>
    <relationshipName>Notification_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>