force-app/main/default/objects/Notification_Process__c/fields/Parent_Notification_Process__c.field-meta.xml
<CustomField>
    <fullName>Parent_Notification_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Notification Process</label>
    <referenceTo>Notification_Process__c</referenceTo>
    <relationshipLabel>New Notification Processes</relationshipLabel>
    <relationshipName>Notification_Processes1</relationshipName>
    <type>Lookup</type>
</CustomField>