force-app/main/default/objects/Notification_Process__c/fields/ParentNotificationRejected__c.field-meta.xml
<CustomField>
    <fullName>ParentNotificationRejected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ParentNotificationRejected</label>
    <type>Checkbox</type>
</CustomField>