force-app/main/default/objects/Notification_Process__c/fields/Technical_Manager__c.field-meta.xml
<CustomField>
    <fullName>Technical_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Notification_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>