force-app/main/default/objects/Notification_Process__c/fields/Type_of_Change__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Change__c</fullName>
    <label>Type of Change</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Materials</fullName>
            </value>
            <value>
                <fullName>Methods</fullName>
            </value>
            <value>
                <fullName>Machines</fullName>
            </value>
            <value>
                <fullName>People</fullName>
            </value>
            <value>
                <fullName>Measurement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>