force-app/main/default/objects/Notification_Process__c/validationRules/Change_Date_Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Change_Date_Complete</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	 ISPICKVAL(Type__c, &apos;Simple&apos;),
  ISBLANK(Change_date__c)
				)</errorConditionFormula>
    <errorDisplayField>Change_date__c</errorDisplayField>
    <errorMessage>You must complete the Change Date field.</errorMessage>
</ValidationRule>