force-app/main/default/objects/Notification_Process__c/validationRules/Deadline_For_Response_Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Deadline_For_Response_Complete</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Type__c, &apos;With Approval&apos;),
ISBLANK(Deadline_For_Response__c)
)</errorConditionFormula>
    <errorDisplayField>Deadline_For_Response__c</errorDisplayField>
    <errorMessage>You must complete the Deadline For Response field.</errorMessage>
</ValidationRule>