force-app/main/default/objects/Notification_Process__c/validationRules/New.validationRule-meta.xml
<ValidationRule>
    <fullName>New</fullName>
    <active>true</active>
    <description>A new record only be created in a New status</description>
    <errorConditionFormula>AND(
 ISNEW(),
 NOT( ISPICKVAL( Status__c , &apos;New&apos; ) )
)</errorConditionFormula>
    <errorMessage>When you are creating a new record, the only status allowed is New</errorMessage>
</ValidationRule>