force-app/main/default/objects/Notification_Process__c/validationRules/No_file_attached.validationRule-meta.xml
<ValidationRule>
    <fullName>No_file_attached</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
					NOT(Has_Attachment__c),
		 ISCHANGED(Status__c) 			
				)</errorConditionFormula>
    <errorMessage>You must add a file before submitting for approval</errorMessage>
</ValidationRule>